# Programmieruebungen

./: CMakeLists.txt  README.md  main.c
Uebungsfolge 1/: Kapita.c  Test.c  calc.c  sizes.c  zahlen.c
Uebungsfolge 2/: Folge 2.c
Uebungsfolge 3/: 3-4.c  3-5.c  Bedingungsoperator.c  Sudoku.c  Teilbarkeit.c
Uebungsfolge 4/: matrix.c  notenverwaltung.c  structs.c
Uebungsfolge 5/: datum.c  mustererkennung .c  numerische .c  sortieren.c  wordcount.c
Uebungsklausur/: Schach.c  Uhrzeit.c  structuebung.c
