cmake_minimum_required(VERSION 3.20)
project(Uebungen C)

set(CMAKE_C_STANDARD 99)

add_executable(Uebungen main.c "Uebungsfolge 5/wordcount.c" "Uebungsfolge 5/datum.c" "Uebungsfolge 4/notenverwaltung.c" "Uebungsfolge 4/matrix.c" "Uebungsfolge 4/structs.c" Uebungsklausur/Schach.c Uebungsklausur/structuebung.c)