cmake_minimum_required(VERSION 3.20)
project(Uebungen C)

set(CMAKE_C_STANDARD 99)

add_executable(Uebungen main.c "Uebungsfolge 1/calc.c" "Uebungsfolge 1/Kapita.c" "Uebungsfolge 1/sizes.c" "Uebungsfolge 1/zahlen.c" "Uebungsfolge 5/wordcount.c" "Uebungsfolge 5/datum.c" "Uebungsfolge 4/notenverwaltung.c" "Uebungsfolge 4/matrix.c" "Uebungsfolge 4/structs.c" Uebungsklausur/Schach.c Uebungsklausur/structuebung.c "Uebungsfolge 2/Folge 2.c" "Uebungsfolge 3/Teilbarkeit.c" "Uebungsfolge 3/3-4.c" "Uebungsfolge 3/3-5.c" "Uebungsfolge 3/Bedingungsoperator.c" Uebungsklausur/Uhrzeit.c)